--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,12 @@
 fastapi==0.115.0
 uvicorn[standard]==0.32.0
 python-multipart==0.0.12
-pillow==11.0.0
-numpy==2.1.3
-torch==2.5.1
-torchvision==0.20.1
+pillow==10.4.0
+numpy==1.26.4
+torch==2.3.0
+torchvision==0.18.0
 opencv-python==4.10.0.84
 rembg==2.0.59
 python-dotenv==1.0.1
+gunicorn==21.2.0
 
